<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/handy_bg"
    android:orientation="vertical"
    tools:context=".core.ui.activity.WebViewActivity"
    >

    <include layout="@layout/toolbar_with_horizontal_progress"/>

    <com.handybook.handybook.library.ui.view.HandyWebView
        android:id="@+id/handy_web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
