<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/handy_background_gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/text_plan_title"
            style="@style/TextView.Large.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Every 2 Weeks"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_cleaning"
            android:layout_marginTop="@dimen/default_margin_half"
            style="@style/TextView.Medium"
            />

        <TextView
            android:id="@+id/text_plan_subtitle"
            style="@style/TextView.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            tools:text="Monday Aug 1 @ 2:00pm"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Button.Link.Bold"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/edit"
        android:gravity="end|center_vertical"
        />
</RelativeLayout>
