...
            android:layout_gravity="start|center_vertical"
            android:padding="@dimen/default_padding"
            tools:text="You have 1 active cleaning plan"
            />

        <Button
            android:id="@+id/button_plan_expand"
            style="@style/Button.Link.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:gravity="end|center_vertical"
            android:text="@string/edit"
...
