<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <com.handybook.handybook.core.ui.widget.CreditCardIconImageView
            android:id="@+id/card_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/bg_edit_text_no_border"
            android:contentDescription="@string/credit_card"
            android:paddingBottom="@dimen/default_padding"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="0dp"
            android:paddingStart="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:src="@drawable/ic_card_blank"
            />

        <com.handybook.handybook.core.ui.widget.CreditCardNumberInputTextView
            android:id="@+id/credit_card_text"
            style="@style/EditText.CreditCard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text_no_border"
            android:enabled="false"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:paddingEnd="@dimen/default_padding"
            android:paddingLeft="0dp"
            android:paddingRight="@dimen/default_padding"
            android:paddingStart="0dp"
            >

            <Button
                android:id="@+id/change_button"
                style="@style/RoundedButton"
                android:layout_gravity="center"
                android:text="@string/change"
                />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_extras_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <com.handybook.handybook.core.ui.widget.CreditCardExpDateInputTextView
            android:id="@+id/exp_text"
            style="@style/EditText.CreditCardExp"
            android:layout_weight="1"
            />

        <com.handybook.handybook.core.ui.widget.CreditCardCVCInputTextView
            android:id="@+id/cvc_text"
            style="@style/EditText.CreditCardCVC"
            android:layout_weight="1"
            android:background="@drawable/bg_edit_text_no_border"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text_no_border"
            >

            <ImageView
                android:id="@+id/lock_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="lock"
                android:paddingEnd="@dimen/default_padding"
                android:paddingLeft="0dp"
                android:paddingRight="@dimen/default_padding"
                android:paddingStart="0dp"
                android:src="@drawable/ic_lock"
                />

        </FrameLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/scan_card_button"
        style="@style/TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/scan_credit_card_button"
        android:textColor="@color/handy_darkened_blue"
        android:drawableLeft="@drawable/ic_camera"
        android:drawablePadding="@dimen/default_padding_half"
        android:visibility="gone"
        tools:visibility="visible"
        />
</LinearLayout>
