...
    android:focusableInTouchMode="true"
    >

    <include layout="@layout/toolbar_booking_flow"/>

    <Button
        android:id="@+id/login_button"
        android:text="@string/sign_in"
        style="@style/Button.Green" />

    <ScrollView
        android:id="@+id/login_scroll_view"
        android:layout_width="match_parent"
...
                android:gravity="center"
                android:text="@string/welcome_back_formatted"
                android:visibility="gone"
                style="@style/TextView" />

            <com.handybook.handybook.core.ui.widget.EmailInputTextView
                android:id="@+id/email_text"
                android:layout_below="@id/welcome_text"
                style="@style/EditText.Email" />

            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/password_text"
                android:layout_below="@id/email_text"
...
