...
    <string name="peak_price_info_unavailable">Due to high demand, certain times are unavailable. Scroll through the calendar to find alternate times.</string>
    <string name="unavailable">Unavailable</string>
    <string name="confirmation">Confirmation</string>
    <string name="payment_confirmed">Your payment is confirmed.</string>
    <string name="finish">Finish</string>
    <string name="use_your_pwd">Use your password to log in and \nmanage your bookings.</string>
    <string name="how_often">How Often?</string>
    <string name="every_week">Every week</string>
    <string name="every_four_weeks">Every 4 weeks</string>
    <string name="every_two_weeks">Every 2 weeks</string>
    <string name="save">Save</string>
    <string name="available">Available</string>
    <string name="extras">Extras</string>
...
    <string name="pickup_title">YOUR FIRST PICK-UP</string>
    <string name="dropoff_title">DELIVERY</string>
    <string name="dropoff_info">When laundry is ready in 48 hours, we’ll ask for a delivery time.</string>
    <string name="addtional_laundry_info">Adding dry cleaning &amp; laundry is free. You will only be charged if you give us laundry. Skip anytime.</string>
    <string name="add_laundry">Add to Future Cleanings</string>
    <string name="entry_info">Entry Information</string>
    <string name="cleaning_routine">Cleaning Routine</string>
    <string name="job_details">Job Details</string>
    <string name="total">Total</string>
    <string name="need_help_question">Need help?</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_message">Send Message</string>
    <string name="contact_form_hint">Tell us how we can help</string>
...
